# django-graphql

./: .gitignore  LICENSE  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py
tenc_graphene/: schema.py  settings.py  urls.py  views.py
tenc_graphql/: schema.py  settings.py  urls.py  views.py
tests/: conftest.py  schema.py  test_schema.py  test_urls.py  test_views.py  urls.py  utils.py
