[metadata]
name = django-graphql
version = 0.6
license = BSD 3-Clause License
description = Django app adding Django-Graphene with some initial work and easy configuration.
long_description = file: README.md
author = 10Clouds - Dream Team
author_email = radoslaw.kowalski@10clouds.com
classifiers =
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Intended Audience :: Developers
	License :: OSI Approved :: BSD 3-Clause License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Internet :: WWW/HTTP
	Topic :: Internet :: WWW/HTTP :: GraphQL

[options]
install_requires =
	django
	graphene_django

[options.packages.find]
exclude =
	tests
	tests.py
	requirements
